assets/source/sass/navigation/_header-flexible.scss
.c-header.c-header--flexible {
    &#site-header-flexible-upper {
        z-index: 8;
    }

    &#site-header-flexible-lower {
        z-index: 6;
    }

    .grid-container {
        display: grid;
        grid-template-rows: 1fr 1fr;
    }

    // Content Areas
    .c-header__main-upper-area,
    .c-header__main-lower-area {
        gap: calc(var(--base) * 2);
        min-height: calc(var(--base) * 10);
    }

    // Better responsive behavior if no centered content.
    &.c-header--flexible-has-centered-content {
        .c-header__main-upper-area,
        .c-header__main-lower-area {
            grid-template-columns: 1fr auto 1fr;
        }
    }

    .c-header__main-upper-area,
    .c-header__main-lower-area {
        display: grid;
        grid-template-columns: auto auto auto;
        align-items: center;
    }

    // Alignment areas
    .c-header__upper-left,
    .c-header__upper-center,
    .c-header__upper-right,
    .c-header__lower-left,
    .c-header__lower-center,
    .c-header__lower-right {
        display: flex;
        align-items: center;
        gap: calc(var(--base) * 2);
    }

    .c-header__lower-left,
    .c-header__upper-left {
        justify-content: flex-start;
    }

    .c-header__lower-center,
    .c-header__upper-center {
        justify-content: center;
    }

    .c-header__lower-right,
    .c-header__upper-right {
        justify-content: flex-end;
    }

    // Brand text
    .c-header__brand-text {
       font-size: var(--c-brand-font-size, calc(var(--base) * 3));
    }
}

